add: profiles api with database conection
